# dmx_rx

./: Cargo.toml  arduino_pico.ino  cspell.json
.cargo/: config.toml
src/: channels.rs  dmx.rs  event_router.rs  i2c_device.rs  main.rs  spi_device.rs
